Increase the permgen to get it to build the XTS sar: http://albany/view/Narayana+BlackTie/job/jbossts-trunk-java6/1072/console